Se agregaron más archivos de internacionalizaciones.

--- a/config/locales/es.yml
+++ b/config/locales/es.yml
@@ -2,8 +2,9 @@ es:
   ##############################
   # SCAFFOLD
   ##############################
-  business:
+  businesses:
     index:
+      title: "Negocios"
       actions:
   views:
     application:
