Se creó el módulo de delivery_men.

--- a/config/locales/active_record.es.yml
+++ b/config/locales/active_record.es.yml
@@ -1,11 +1,14 @@
 es:
   activerecord:
     models:
-      office: "Business"
+      business: "Business"
+      delivery_man: "Repartidor"
     attributes:
       business:
         name: "Nombre"
         address: "Dirección"
+      delivery_man:
+        nickname: "Apodo"
     errors:
       models:
         business:
