Se creó el módulo de deliveries. Se refactorizaron controladores y vistas de los demas módulos.

--- a/config/locales/active_record.es.yml
+++ b/config/locales/active_record.es.yml
@@ -4,6 +4,7 @@ es:
       business: "Business"
       delivery_man: "Repartidor"
       order: "Pedido"
+      delivery: "Reparto"
     attributes:
       business:
         name: "Nombre"
@@ -13,6 +14,10 @@ es:
       order:
         business: "Negocio"
         address: "Dirección"
+        start_date: "Fecha de inicio"
+        end_date: "Fecha de fin"
+      delivery:
+        delivery_man: "Repartidor"
         start_date: "Fecha de inicio"
         end_date: "Fecha de fin"
     errors:
