--- a/config/locales/active_record.es.yml
+++ b/config/locales/active_record.es.yml
@@ -24,6 +24,11 @@ es:
         name: "Nombre"
         description: "Descripcion"
         price: "Precio"
+      user:
+        name: "Nombre"
+        email: "Correo electrónico"
+        password: "Contraseña"
+        password_confirmation: "Confirmar contraseña"
     errors:
       models:
         business:
