Migracion referencia de business a producto, de orden a producto. Cancel de una orden

--- a/config/locales/defaults.es.yml
+++ b/config/locales/defaults.es.yml
@@ -36,6 +36,7 @@ es:
       disable:         "Deshabilitar"
       confirm_destroy: "¿Está seguro que desea borrar el elemento seleccionado?"
       back:            "Volver"
+      cancel:           "Cancelar"
     form:
       actions:
         submit: "Guardar cambios"
