--- a/config/locales/defaults.es.yml
+++ b/config/locales/defaults.es.yml
@@ -36,7 +36,8 @@ es:
       disable:         "Deshabilitar"
       confirm_destroy: "¿Está seguro que desea borrar el elemento seleccionado?"
       back:            "Volver"
-      cancel:           "Cancelar"
+      cancel:          "Cancelar"
+      suspend:         "Suspender" 
     form:
       actions:
         submit: "Guardar cambios"
