Se corrigieron aspectos visuales relacionados con los estados de la orden

--- a/config/locales/active_record.es.yml
+++ b/config/locales/active_record.es.yml
@@ -16,6 +16,7 @@ es:
         address: "Dirección"
         start_date: "Fecha de inicio"
         end_date: "Fecha de fin"
+        status: "Estado"
       delivery:
         delivery_man: "Repartidor"
         start_date: "Fecha de inicio"
