--- a/config/locales/responders.es.yml
+++ b/config/locales/responders.es.yml
@@ -12,9 +12,14 @@ es:
         notice_html: '<i class="glyphicon glyphicon-ok-sign"></i> El %{resource_name} fue borrado correctamente'
         alert: 'El %{resource_name} no puede ser borrado'
         alert_html: '<i class="glyphicon glyphicon-exclamation-sign"></i> El %{resource_name} no puede ser borrado'
-    order:
-      cancel, suspend:
+    orders:
+      cancel:
         notice: 'El estado se ha actualizado correctamente'
         notice_html: '<i class="glyphicon glyphicon-ok-sign"></i> El estado se ha actualizado correctamente'
         alert: 'Ha ocurrido un error en la actualización de estado'
         alert_html: '<i class="glyphicon glyphicon-exclamation-sign"></i> Ha ocurrido un error en la actualización de estado'
+      suspend:
+        notice: 'El estado se ha actualizado correctamente'
+        notice_html: '<i class="glyphicon glyphicon-ok-sign"></i> El estado se ha actualizado correctamente'
+        alert: 'Ha ocurrido un error en la actualización de estado'
+        alert_html: '<i class="glyphicon glyphicon-exclamation-sign"></i> Ha ocurrido un error en la actualización de estado'        
