Se agregaron datos al show de un delivery y relación con delivery al formulario de order.

--- a/config/locales/active_record.es.yml
+++ b/config/locales/active_record.es.yml
@@ -13,6 +13,7 @@ es:
         nickname: "Apodo"
       order:
         business: "Negocio"
+        delivery: "Reparto"
         address: "Dirección"
         start_date: "Fecha de inicio"
         end_date: "Fecha de fin"
