--- a/config/locales/active_record.es.yml
+++ b/config/locales/active_record.es.yml
@@ -27,5 +27,7 @@ es:
         price: "Precio"
     errors:
       models:
-        business:
+        order:
           attributes:
+            position:
+              :geocode_fail: "Fallo la geocodificación"
