Se refactorizaron vistas del forntend, se incluyeron imagenes para los locales.

--- a/config/locales/active_record.es.yml
+++ b/config/locales/active_record.es.yml
@@ -20,6 +20,7 @@ es:
         start_date: "Fecha de inicio"
         end_date: "Fecha de fin"
         status: "Estado"
+        product_ids: "Productos"
       delivery:
         delivery_man: "Repartidor"
         start_date: "Fecha de inicio"
