Se configuraron todas las rutas a partir de business. Se requiere business_id en el aplication controller excluyendo el purchase_controller. Se refactorizaron las vistas de acuerdo a estos cambios.

--- a/config/locales/es.yml
+++ b/config/locales/es.yml
@@ -37,13 +37,15 @@ es:
     application:
       title: "Plataforma de seguimiento de pedidos"
     navbar:
-      app_title: "Plataforma de seguimiento de pedidos"
+      app_title: "<b>%{business}</b> - <small>Plataforma de seguimiento de pedidos</small>"
       bussines: "Negocios"
       dropdown: 
         title: "Configuración"
         delivery_men: "Repartidores"
         orders: "Pedidos"
         deliveries: "Repartos"        
+        edit_business: "Editar local"
+        products: "Productos"
     errors:
       messages:
         unprocessable_entity:          "Entidad no procesable"
