Se dio acceso a la información de cada local desde el index de locales.

--- a/config/locales/es.yml
+++ b/config/locales/es.yml
@@ -6,7 +6,7 @@ es:
     index:
       title: "Negocios"
     actions:
-      add_products: "Agregar productos"
+      access: "Acceder al local"
     filter:
       name: "Nombre"
       address: "Dirección"
