Se agregó seteo de path_strategy en formulario de business y delivery, donde tambien se agregó la posibilidad de cargar las ordenes del delivery.

--- a/config/locales/active_record.es.yml
+++ b/config/locales/active_record.es.yml
@@ -9,6 +9,7 @@ es:
       business:
         name: "Nombre"
         address: "Dirección"
+        path_strategy: "Estrategia de recorrido"
       delivery_man:
         nickname: "Apodo"
       order:
@@ -25,6 +26,8 @@ es:
         delivery_man: "Repartidor"
         start_date: "Fecha de inicio"
         end_date: "Fecha de fin"
+        path_strategy: "Estrategia de recorrido"
+        order_ids: "Ordenes"
       product:
         name: "Nombre"
         description: "Descripcion"
