Se crearon metodos y lógica para activar un delivery.

--- a/config/locales/es.yml
+++ b/config/locales/es.yml
@@ -32,6 +32,8 @@ es:
     index:
       title: "Repartos"
       secondary_title: "del local %{model}"
+    actions:
+      activate: "Activar/Enviar"
   products:
     index:
       title: "Productos"
