Se refactorizó flujo de creación de una orden desde el frontend.

--- a/config/locales/es.yml
+++ b/config/locales/es.yml
@@ -28,6 +28,8 @@ es:
       start_date: "Fecha de inicio"
       end_date: "Fecha de fin"
       status: "Estado"
+    actions:
+      track_order: "Seguí tu pedido"
   deliveries:
     index:
       title: "Repartos"
