--- a/config/locales/responders.es.yml
+++ b/config/locales/responders.es.yml
@@ -23,3 +23,6 @@ es:
         notice_html: '<i class="glyphicon glyphicon-ok-sign"></i> El estado se ha actualizado correctamente'
         alert: 'Ha ocurrido un error en la actualización de estado'
         alert_html: '<i class="glyphicon glyphicon-exclamation-sign"></i> Ha ocurrido un error en la actualización de estado'        
+      create_order:
+        alert: "El pedido no pudo ser creado, por favor chequee los errores a continuación y vuelva a intentarlo."
+        notice: "El pedido fue creado con éxito. Para seguir su pedido utilizá este código %{hash_code} en la sección <b>Seguí tu pedido</b> o hace click "
