Se agregaron posiciones al mapa del seguimiento de una orden y lógica para contemplar distintas situaciones.

--- a/config/locales/defaults.es.yml
+++ b/config/locales/defaults.es.yml
@@ -27,6 +27,7 @@ es:
     filters:
       submit:       "Filtrar"
       clear_filter: "Limpiar"
+      search_order: "Buscar orden"
     actions:
       new:             "Nuevo"
       show:            "Ver detalles"
