--- a/config/locales/simple_form.es.yml
+++ b/config/locales/simple_form.es.yml
@@ -1,4 +1,4 @@
-en:
+es:
   simple_form:
     "yes": 'Si'
     "no": 'No'
@@ -10,6 +10,9 @@ en:
       # html: '<abbr title="required">*</abbr>'
     error_notification:
       default_message: "Por favor, vea los errores a continuación:"
+    hints:
+      order:
+        hash_code: "Ingrese el código de orden entregado al realizar el pedido."
     # Examples
     # labels:
     #   defaults:
