Se agregó el código de la orden en el listado de las mismas. Se corrigió vista de seguimiento de la orden en caso de no tener repartidor asociado.

--- a/config/locales/active_record.es.yml
+++ b/config/locales/active_record.es.yml
@@ -22,6 +22,7 @@ es:
         end_date: "Fecha de fin"
         status: "Estado"
         product_ids: "Productos"
+        hash_code: "Código"
       delivery:
         delivery_man_id: "Repartidor"
         delivery_man: "Repartidor"
