Se agregó descripción en el título además de la dirección en la serialización de las ordenes para mostrar el mapa.

--- a/config/locales/es.yml
+++ b/config/locales/es.yml
@@ -24,6 +24,8 @@ es:
     track_order:
       title: "Seguí tu pedido!"
       hash_code: "Código de orden"
+    map:
+      title: "Dirección de entrega: %{address}"
     filter:
       business: "Negocio"
       address: "Dirección"
