Se agregaron links en el listado de ordenes para marcar ordenes como en desarrollo y lista para enviar.

--- a/config/locales/defaults.es.yml
+++ b/config/locales/defaults.es.yml
@@ -39,6 +39,8 @@ es:
       back:            "Volver"
       cancel:          "Cancelar"
       suspend:         "Suspender" 
+      dispatch:        "Lista para enviar"
+      process:         "Procesar"
     form:
       actions:
         submit: "Guardar cambios"
