Se agregó un estado al delivery y se incluyó en las vistas.

--- a/config/locales/active_record.es.yml
+++ b/config/locales/active_record.es.yml
@@ -32,6 +32,8 @@ es:
         end_date: "Fecha de fin"
         path_strategy: "Estrategia de recorrido"
         order_ids: "Ordenes"
+
+        status: "Estado"
       product:
         name: "Nombre"
         description: "Descripcion"
