Se refactorizaron estados virtuales del reparto.

--- a/config/locales/enum.es.yml
+++ b/config/locales/enum.es.yml
@@ -11,5 +11,6 @@ es:
         ready_to_send:  "<span class='label label-success'> Listo para enviar </span>"
     delivery:
       status:
-        active:  "<span class='label label-success'> En reparto </span>"
-        finalized:  "<span class='label label-info'> Finalizado </span>"
+        active:  "<span class='label label-info'> En reparto </span>"
+        finalized:  "<span class='label label-success'> Finalizado </span>"
+        ready_to_send: "<span class='label label-warning'> Listo para despachar </span>"
