Se refactorizaron acciones que se podían hacer sobre la orden desde el index.

--- a/config/locales/es.yml
+++ b/config/locales/es.yml
@@ -37,6 +37,7 @@ es:
       customer_full_name: "Nombre o apellido del comprador"
       customer_email: "Email del comprador"
     actions:
+      mark_as_sended: "Enviar"
       track_order: "Seguí tu pedido"
   deliveries:
     index:
