Se cambiaron atributos de tipo date por datetime. Se agregaron gemas, inputs y configuraciones especificas para inputs de tipo datetime. Se refactorizaron vistas asociadas.

--- a/config/locales/es.yml
+++ b/config/locales/es.yml
@@ -33,6 +33,8 @@ es:
       order_details: "Detalles del pedido"
     map:
       title: "Dirección de entrega: %{address}"
+    new_order:
+      title: "Pedido para el local %{business}"
     filter:
       business: "Negocio"
       address: "Dirección"
