Se agregó acción para finalizar un reparto.

--- a/config/locales/es.yml
+++ b/config/locales/es.yml
@@ -58,6 +58,7 @@ es:
       title: "Nueva entrega para el negocio %{model}"
     actions:
       activate: "Activar/Enviar"
+      finalize: "Finalizar"
   products:
     index:
       title: "Productos"
